--- a/TODO
+++ b/TODO
@@ -1,33 +1,19 @@
-https://lc.llnl.gov/confluence/display/RAM/FIS
-https://myconfluence.llnl.gov/display/RAM/ClassifiedLCAccess
-
-Do I need to use "AdditionalMachineAccess":
-https://myconfluence.llnl.gov/display/RAM/AdditionalMachineAccess
-
-How to get a FIS account:
-https://myconfluence.llnl.gov/display/RAM/FIS#FIS-DoIhaveaFISaccount?
-Left Off: Sent the form to Jeff.  Waiting for approval, so I can start using Hopper to do deployments (still need the directories of where to move stuff).
-
-Matt - leave - next three weeks in and out, starting week of nov 19th
-1. DONE - Title -
-2. test.html - add matt's new directory.  He wanted me to add a directory to the test page.
-
-
-- Help fix Stephanie's problem:
-    /usr/gapps/spot: vi /usr/gapps/spot/templates/TemplateNotebook.ipynb
-    I will modify this sys.path.append('/usr/gapps/spot/hatchet')\n do be her new directory.
-
-
+DONE - Fix stephanies immediate problem with regards to being able to update the template file
 DONE - Fix Nathan's issue about not being able to send the command.
     * worked with Joe to integrate new command propogation.
 DONE - Boehma is able to reproduce the issue about the select drop down height.  Let's fix that.
+
+- make spot_dev.py for dev and spot.py for live.
 - Make button for multi jupyter request and /usr/tce/bin/python3 /usr/gapps/spot/spot.py multi_jupyter /usr/gapps/spot/datasets/lulesh_gen/1000/333.cali
     * on dev_spot.py create def multi_jupyter to allow for multipole jupyter files.
+
 - On dev_spot.py replace /usr/gapps/spot/hatchet with a template string and set it in def jupyter (copy of def jupyter)
 Then test.
 Then release to live on OCF and SCF.
+- test.html - add matt's new directory.  He wanted me to add a directory to the test page.
 
 2. David Boehma's dataset is causing some issue for one of the piecharts not showing up.
+
 
 Next:
 DONE - Fix link to Documentation
@@ -81,6 +67,9 @@ DONE - add curve to horiz bar chart and pie chart.
 - Fix horizontal brackets lining up with the actual bar charts.
 - Test Data the Jupyter notebooks don't seem to work.
 
+- Help fix Stephanie's problem:
+    /usr/gapps/spot: vi /usr/gapps/spot/templates/TemplateNotebook.ipynb
+    I will modify this sys.path.append('/usr/gapps/spot/hatchet')\n do be her new directory.
 
 https://lc.llnl.gov/spot/dcvis/?sf=/usr/gapps/spot/datasets/lulesh_gen/100
 
@@ -105,6 +94,16 @@ rm myfile.tar
 quit
 
 /usr/gapps/spot
+
+FIS
+https://lc.llnl.gov/confluence/display/RAM/FIS
+https://myconfluence.llnl.gov/display/RAM/ClassifiedLCAccess
+
+Do I need to use "AdditionalMachineAccess":
+https://myconfluence.llnl.gov/display/RAM/AdditionalMachineAccess
+
+How to get a FIS account:
+https://myconfluence.llnl.gov/display/RAM/FIS#FIS-DoIhaveaFISaccount?
 
 
 
