--- a/TODO
+++ b/TODO
@@ -15,7 +15,9 @@ JOE WORKING - why did checkboxes break?  spot.py error.
 DONE - MJ make it an icon.
 DONE - add a dialog popup if they select more than 300 or so.
 DONE - get rid of console logging too much.
-2. David Boehma's dataset is causing some issue for one of the piecharts not showing up.
+DONE - David Boehma's dataset is causing some issue for one of the piecharts not showing up.
+
+- Can you update the SPOT code to test for SCF, and use cslic if we’re running there?
 - investigate "vue.js:597 [Vue warn]: Cannot find element: bottom-tabs"
 
 
