--- a/TODO
+++ b/TODO
@@ -20,13 +20,11 @@ DONE - David Boehma's dataset is causing some issue for one of the piecharts not
 
 - Can you update the SPOT code to test for SCF, and use cslic if we’re running there?
     * I think he's talking about the machine that get's selected.
+    * How do I test for SCF?
 
 - Create tests for Subfolder testing. this is "a key part of their workflow"
 
 - investigate "vue.js:597 [Vue warn]: Cannot find element: bottom-tabs"
-
-
-Matt gone tue, wed, thur of next week.
 
 
 
