--- a/TODO
+++ b/TODO
@@ -18,14 +18,12 @@ DONE - get rid of console logging too much.
 DONE - David Boehma's dataset is causing some issue for one of the piecharts not showing up.
 DONE - Can you update the SPOT code to test for SCF, and use cslic if we’re running there?
 
-- Create tests for Subfolder testing. this is "a key part of their workflow"
-    * we could do symlinks.
-    * linke from our test suite page.
-- TEST: Fix Subfolder issue ( i think this is for the BE to fix ).
-- Force Environment.js to be there
-    * provide error message if there is no Environemnt.js there.
-- Use machine designation instead of environment designation (each environment can define it's own machine)
-
+DONE - Create tests for Subfolder testing. this is "a key part of their workflow"
+DONE - linke from our test suite page.
+TEST - Fix Subfolder issue ( i think this is for the BE to fix ).
+TEST - Force Environment.js to be there * provide error message if there is no Environemnt.js there.
+TEST - Use machine designation instead of environment designation (each environment can define it's own machine)
+- Figure out Git Ignore, why is it no ignoring Environment.js
 
 - Release to SCF.
     * make sure we get feedback from Marble team to see if it works for them.
