Initial scatter plot chart along with basic on page display, but disconnected, along with some initial x scaling work
Former-commit-id: 7eadef91efee34c0781cb06e9facc95545625b13

--- a/TODO
+++ b/TODO
@@ -1,4 +1,9 @@
 Next:
+- trying to set up min and max in layoutAugmenterModel so that correct xrange can be calculated.
+    * also do that for yrange.
+- x axis and yaxis labels.
+
+
 DONE - update spotfe repo.
 DONE - update spotbe repo
 
