scatter plot rename and the xrange calculation dynamically so it can adjust
Former-commit-id: da9d36b9cada409169e3607c8180ee7aad06951c

--- a/TODO
+++ b/TODO
@@ -1,6 +1,5 @@
 Next:
-- trying to set up min and max in layoutAugmenterModel so that correct xrange can be calculated.
-    * also do that for yrange.
+- set up links to cz dev environment.
 - x axis and yaxis labels.
 
 
