strip chars from title, and push new layout onto used layouts for total rendering
Former-commit-id: 23188744bdb0f83df8cccc351d146754b82a4d66

--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 Next:
-- set up links to cz dev environment.
+- Do layout assumption set up, when user clicks on chart set up button.
 - x axis and yaxis labels.
+- set up links to cz dev environment.
 
 
 DONE - update spotfe repo.
