use real data instead of stubs
Former-commit-id: d1e32ca9a01df159ce67b77fe39aa26bae647556

--- a/TODO
+++ b/TODO
@@ -1,6 +1,8 @@
 Next:
-- Do layout assumption set up, when user clicks on chart set up button.
+- hook up real data, not fake data.
 - x axis and yaxis labels.
+- Dragging the chart bar selector, with brush.
+- Set up URL persistance for chart selection.
 - set up links to cz dev environment.
 
 
