--- a/TODO
+++ b/TODO
@@ -1,8 +1,10 @@
 Next:
-- hook up real data, not fake data.
+- use yrange calcualted, so as to add +1 to top and -1 to bottom.
 - x axis and yaxis labels.
-- Dragging the chart bar selector, with brush.
-- Set up URL persistance for chart selection.
+- Do reset link for ScatterChart.
+- Set up URL persistance for chart addition.
+    * persistance for chart checked/unchecked.
+    * URL bar persistance both: saving and loading.
 - set up links to cz dev environment.
 
 
