set up yrange, set the min and max of the y-axis
Former-commit-id: 211d28c454304a0d7eaaca3e6886fe1088e1c2fe

--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 Next:
-- use yrange calcualted, so as to add +1 to top and -1 to bottom.
+DONE - Do reset link for ScatterChart.
+DONE - use yrange calcualted, so as to add +1 to top and -1 to bottom.
 - x axis and yaxis labels.
-- Do reset link for ScatterChart.
 - Set up URL persistance for chart addition.
     * persistance for chart checked/unchecked.
     * URL bar persistance both: saving and loading.
