--- a/TODO
+++ b/TODO
@@ -6,6 +6,7 @@ DONE - use yrange calcualted, so as to add +1 to top and -1 to bottom.
     * persistance for chart checked/unchecked.
     * URL bar persistance both: saving and loading.
 - set up links to cz dev environment.
+- make test data.
 
 
 DONE - update spotfe repo.
