--- a/TODO
+++ b/TODO
@@ -1,12 +1,12 @@
 Next:
 DONE - Do reset link for ScatterChart.
 DONE - use yrange calcualted, so as to add +1 to top and -1 to bottom.
-- x axis and yaxis labels.
+DONE - x axis and yaxis labels.
+- set up links to cz dev environment.
+* URL bar persistance both: saving and loading.
+- make test data.
 - Set up URL persistance for chart addition.
     * persistance for chart checked/unchecked.
-    * URL bar persistance both: saving and loading.
-- set up links to cz dev environment.
-- make test data.
 
 
 DONE - update spotfe repo.
