Show chart name on the checkbox area, so its not blank
Former-commit-id: 3bd73cb47e9ccf15a7dd43199602bc981d93ca15

--- a/TODO
+++ b/TODO
@@ -3,10 +3,12 @@ DONE - Do reset link for ScatterChart.
 DONE - use yrange calcualted, so as to add +1 to top and -1 to bottom.
 DONE - x axis and yaxis labels.
 DONE - set up links to cz dev environment.
-* URL bar persistance both: saving and loading.
+* the checkbox text in Preferences.
+* URL bar persistance both: saving and loading. (URLStateManager: line 144)
 - make test data.
 - Set up URL persistance for chart addition.
     * persistance for chart checked/unchecked.
+- Investigate Adiak + Spot.
 
 
 DONE - update spotfe repo.
