--- a/TODO
+++ b/TODO
@@ -2,8 +2,11 @@ Next:
 DONE - David's Paper - read it and mention if anything is unclear.
 DONE - select drop downs should update chart type name.
 DONE - Selecting nothing will put things in a weird state.
+DONE - launchDate * dates on y-axis need to show as dates.
+- unchecking things causes problems -> not reflecting correctly on FE
+- check back with Joe about uncheck persistance.
 - figure of merit on y-axis Fix: it's not showing the entire width.
-- launchDate * dates on y-axis need to show as dates.
+- move x-axis label down if it's a date type.
 
 
 DONE - Do reset link for ScatterChart.
