--- a/TODO
+++ b/TODO
@@ -3,10 +3,15 @@ DONE - David's Paper - read it and mention if anything is unclear.
 DONE - select drop downs should update chart type name.
 DONE - Selecting nothing will put things in a weird state.
 DONE - launchDate * dates on y-axis need to show as dates.
-- unchecking things causes problems -> not reflecting correctly on FE
+DONE - unchecking things causes problems -> not reflecting correctly on FE
+- Prevent the user from adding a chart that they already have 
 - check back with Joe about uncheck persistance.
 - figure of merit on y-axis Fix: it's not showing the entire width.
 - move x-axis label down if it's a date type.
+
+
+Next:
+- Should we have a delete scatterChart type?
 
 
 DONE - Do reset link for ScatterChart.
