reposition x label and make it so its not on top of dates
Former-commit-id: 8be8866ffa9d6a771658bbefae46282a3923aac8

--- a/TODO
+++ b/TODO
@@ -4,7 +4,7 @@ DONE - select drop downs should update chart type name.
 DONE - Selecting nothing will put things in a weird state.
 DONE - launchDate * dates on y-axis need to show as dates.
 DONE - unchecking things causes problems -> not reflecting correctly on FE
-- Prevent the user from adding a chart that they already have
+DONE - Prevent the user from adding a chart that they already have
 - move x-axis label down if it's a date type.
 - check back with Joe about uncheck persistance.
 - figure of merit on y-axis Fix: it's not showing the entire width.
